--- a/Tienda_libreria/src/main/webapp/css/productos.css
+++ b/Tienda_libreria/src/main/webapp/css/productos.css
@@ -1,6 +1,3 @@
-@charset "ISO-8859-1";
-
-
 :root{
     --cream-brulee: #ffea9e;
     --buttercup: #f5b00b;
@@ -11,12 +8,6 @@
     padding: 0;
     margin: 0;
     box-sizing: 0;
-}
-
-ul .productos{
-	background-color: #f5af0b70;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 
 .archivo{
@@ -32,22 +23,58 @@ ul .productos{
     
 }
 
-.archivo form{
+.archivo .cargarSubir{
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
     justify-content: center;
+    background-color: #fff2c3;
+    margin-bottom: 40px;
 }
 
-.archivo form .subir{
+.archivo .cargarSubir div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.archivo .cargarSubir div label{
+    font-size: 1.2em;
+    margin-right: 20px;
+    width: 100%;
+}
+
+.archivo .cargarSubir div input{
+    margin: 20px;
+
+}
+
+.archivo .cargarSubir div .subir{
+    width: 30%;
+    height: 50px;
+}
+
+.archivo .cargar .archivoCargar{
     width: 100%;
     margin-bottom: 30px;
+    background-color: blueviolet;
 }
 
 .archivo form .file{
     width: 50%;
     margin: 10px auto;
 
+}
+
+
+.archivo .cons div input[type=number]{
+    width: 60%;
+    padding: 10px 20px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .archivo form input[type=submit]{
@@ -61,4 +88,42 @@ ul .productos{
     text-decoration: none;
     border-radius: 10px;
     cursor: pointer;
+}
+
+
+.archivo form input[type=submit]:hover{
+    background-color: #a57a14;
+}
+
+
+.archivo .consultar{
+    background-color: #fff2c3;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.archivo .consultar div{
+    width: 50%;
+    display: flex;
+}
+
+.archivo .consultar div label{
+    width: 100%;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
+.archivo .consultar div input[type=text],
+.archivo .consultar div input[type=email],
+.archivo .consultar div input[type=password],
+.archivo .consultar div input[type=number]{
+width: 90%;
+padding: 10px 20px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+
 }
