proyecto completado, todos los requerimientos cumplidos

--- a/Tienda_libreria/src/main/webapp/css/ventas.css
+++ b/Tienda_libreria/src/main/webapp/css/ventas.css
@@ -5,7 +5,9 @@
     --buttercup: #f5b00b;
     --dark-ebony: #3d1f04;
 }
-
+body {
+	background-color : blue;
+}
 *{
     padding: 0;
     margin: 0;
